<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    >

    <TableRow>
        <EditText android:id="@+id/edit_message"
            android:hint="@string/edit_message"
            android:inputType="phone"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:layout_span="1"
            android:layout_weight="1" />

    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/text_digit_count"
            android:padding="3dip" />
        <TextView android:id="@+id/text_digit_count"
            android:text="@string/text_unknown"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/text_issuer"
            android:padding="3dip" />
        <TextView android:id="@+id/text_issuer"
            android:text="@string/text_unknown"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/text_checksum"
            android:padding="3dip" />
        <TextView android:id="@+id/text_checksum"
            android:text="@string/text_unknown"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/text_result"
            android:padding="3dip" />
        <TextView android:id="@+id/text_result"
            android:text="@string/text_unknown"
            android:gravity="right"
            android:padding="3dip" />
    </TableRow>
    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_clear"
            android:onClick="clearMessage" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check"
            android:onClick="checkMessage" />

    </TableRow>
</TableLayout>

